--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 		<link
 			rel="icon"
 			type="image/png"
@@ -25,68 +24,74 @@
 			href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@900&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Frontend Mentor | Meet landing page</title>
+		<title>Meet landing page</title>
 	</head>
 	<body>
 		<main class="container">
-			<div class="card">
+			<section class="card">
 				<header>
-					<div class="logo">
+					<figure class="logo">
 						<img src="./assets/logo.svg" alt="logo" />
-					</div>
-					<div class="left-side">
-						<div class="avatar-group-1 down-left">
-							<div class="avatar">
+					</figure>
+					<section class="left-side">
+						<section class="avatar-group-1 down-left">
+							<figure class="avatar">
+								<img src="./assets/Faces/17.jpg" alt="" />
+							</figure>
+							<figure class="avatar">
+								<img src="./assets/Faces/45.jpg" alt="" />
+							</figure>
+						</section>
+						<section class="avatar-group-1">
+							<figure class="avatar">
+								<img src="./assets/Faces/64.jpg" alt="" />
+							</figure>
+							<figure class="avatar">
 								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-						</div>
-						<div class="avatar-group-1">
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-						</div>
-						<div class="avatar-group-1 down-right">
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-						</div>
-					</div>
-					<div class="right-side">
-						<div class="avatar-group-1">
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-						</div>
-						<div class="avatar-group-1 down-left">
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-						</div>
-						<div class="avatar-group-1">
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-							<div class="avatar">
-								<img src="./assets/Faces/95.jpg" alt="" />
-							</div>
-						</div>
-					</div>
-					<div class="up-text">
+							</figure>
+						</section>
+						<section class="avatar-group-1 down-right">
+							<figure class="avatar">
+								<img src="./assets/Faces/DUhuoeI8.jpg" alt="" />
+							</figure>
+							<figure class="avatar">
+								<img src="./assets/Faces/fyXUlj0e.jpg" alt="" />
+							</figure>
+						</section>
+					</section>
+					<section class="right-side">
+						<section class="avatar-group-1">
+							<figure class="avatar">
+								<img src="./assets/Faces/L7wQctBt.jpg" alt="" />
+							</figure>
+							<figure class="avatar">
+								<img src="./assets/Faces/pexels-photo-415829.jpeg" alt="" />
+							</figure>
+						</section>
+						<section class="avatar-group-1 down-left">
+							<figure class="avatar">
+								<img src="./assets/Faces/pexels-photo-598745.jpeg" alt="" />
+							</figure>
+							<figure class="avatar">
+								<img
+									src="./assets/Faces/photo-1488426862026-3ee34a7d66df.jpg"
+									alt=""
+								/>
+							</figure>
+						</section>
+						<section class="avatar-group-1">
+							<figure class="avatar">
+								<img
+									src="./assets/Faces/photo-1509868918748-a554ad25f858.jpg"
+									alt=""
+								/>
+							</figure>
+							<figure class="avatar">
+								<img src="./assets/Faces/rSuiu_Hr.jpg" alt="" />
+							</figure>
+						</section>
+					</section>
+					<section class="up-text">
 						<h1>Group Chat for Everyone</h1>
 						<p>
 							Meet makes it easy to connect with others face-to-face virtually
@@ -96,40 +101,41 @@
 							<button class="download-btn">Download <span>v1.3</span></button>
 							<button class="violet-btn">What is it?</button>
 						</div>
-					</div>
+					</section>
 				</header>
 
 				<div class="button-01">
 					<p>01</p>
 				</div>
-				<div class="grid-pictures">
-					<div class="top-left">
+
+				<section class="grid-pictures">
+					<figure class="top-left">
 						<img
 							src="./assets/desktop/image-woman-in-videocall.jpg"
 							alt=""
 							srcset=""
 						/>
-					</div>
-					<div class="top-right">
+					</figure>
+					<figure class="top-right">
 						<img
 							src="./assets/desktop/image-women-videochatting.jpg"
 							alt=""
 							srcset=""
 						/>
-					</div>
-					<div class="bottom-left">
+					</figure>
+					<figure class="bottom-left">
 						<img
 							src="./assets/desktop/image-men-in-meeting.jpg"
 							alt=""
 							srcset=""
 						/>
-					</div>
-					<div class="bottom-right">
+					</figure>
+					<figure class="bottom-right">
 						<img src="./assets/desktop/image-man-texting.jpg" alt="" />
-					</div>
-				</div>
+					</figure>
+				</section>
 				<article class="down-text">
-					<h4>Built for modern use</h4>
+					<h2>Built for modern use</h2>
 					<h1>Smarter meetings, all in one place</h1>
 					<p>
 						Send messages, share files, show your screen, and record your
@@ -137,12 +143,11 @@
 						invite-only team access, data encryption, and data export.
 					</p>
 				</article>
-
-				<div class="bottom-card">
+				<footer class="bottom-card">
 					<div class="button-02">
-						<p>02</p>
+						<span>02</span>
 					</div>
-					<div class="bottom-content">
+					<section class="bottom-content">
 						<h1>Experience more together</h1>
 						<p>
 							Stay connected with reliable HD meetings and unlimited one-on-one
@@ -151,9 +156,9 @@
 						<button class="download-btn-violet">
 							Download <span>v1.3</span>
 						</button>
-					</div>
-				</div>
-			</div>
+					</section>
+				</footer>
+			</section>
 		</main>
 	</body>
 </html>
