--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			sizes="32x32"
 			href="./assets/favicon-32x32.png"
 		/>
-		<link rel="stylesheet" href="./assets/style/style.css" />
+		<link rel="stylesheet" href="./assets/style/sass/style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
