font color, text-weight, hover&active

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</head>
 	<body>
 		<main class="container">
-			<section class="card">
+			<section class="card" id="top">
 				<header>
 					<figure class="logo">
 						<img src="./assets/logo.svg" alt="logo" />
@@ -104,7 +104,7 @@
 					</section>
 				</header>
 				<div class="button-01">
-					<p>01</p>
+					<a href="#top">01</a>
 				</div>
 
 				<section class="grid-pictures">
@@ -144,7 +144,7 @@
 				</article>
 				<footer class="bottom-card">
 					<div class="button-02">
-						<span>02</span>
+						<a href="#top">02</a>
 					</div>
 					<section class="bottom-content">
 						<h1>Experience more together</h1>
